solara/server/assets/style.css
/* ... */
.emojione {
    width: 1.2em;
}


.solara-progress .v-progress-linear,
.solara-progress .v-progress-circular,
.solara-progress .v-progress-circular__overlay {
    transition: none !important
}


/* see https://github.com/mariobuikhuizen/voila-vuetify/commit/70441763d9039dff2fe044f61a7651769a2151d4 */
.v-application * {
    box-sizing: border-box;
}


.solara-markdown img {
    max-width: 100%;
}

.solara-markdown {
    max-width: 1024px;
    padding-top: 10px;
}


div.solara-markdown-output>.v-messages {
    font-style: italic;
    margin-top: 10px;
}

div.solara-markdown-output {
    padding: 30px;
    margin-top: 15px;
    margin-bottom: 15px;
}


div.highlight {
    border: 1px solid var(--color-border-appbar);
    background-color: #fafafa;
    padding: 30px;
    border-radius: 20px;
    margin-top: 15px;
    margin-bottom: 15px;
}

.solara-markdown pre,
.solara-markdown .jp-RenderedHTMLCommon pre {
    margin: 0 !important;
    padding: 0 !important;
}

.solara-markdown pre {
    background-color: unset !important
}

.jp-OutputArea-prompt {
    display: none;
}

/* See https://github.com/jupyter-widgets/ipywidgets/issues/3692
  TODO: this fixes the cursor in Solara, but not in the notebook
*/
.solara-image {
    cursor: unset !important;
}

@keyframes solara-fade-in {
    0% {
        opacity: 0.2;
    }

    100% {
        opacity: 1.0;
    }
}

.solara-page-loading .solara-content-main {
    opacity: 0.2;
}

.solara-content-main {
    animation: solara-fade-in 0.5s ease;
}

.solara-autorouter-content {
    height: 100%;
    max-width: 100%;
}

/* originally from index.css */

.p-Widget, /* </DEPRECATED> */
.lm-Widget {
  position: relative;
  overflow: hidden;
  cursor: default;
}

/* Originally from nbconvert, required for accordion widget to work correctly */
.p-Widget.p-mod-hidden, /* </DEPRECATED> */
.lm-Widget.lm-mod-hidden {
  display: none !important;
}

.lm-AccordionPanel[data-orientation='horizontal'] > .lm-AccordionPanel-title {
  /* Title is rotated for horizontal accordion panel using CSS */
  display: block;
  transform-origin: top left;
  transform: rotate(-90deg) translate(-100%);
}

/* change font settings for ipywidgets */
.jupyter-widgets {
  font-weight:400;
  letter-spacing:0;
  text-transform:none;
  font-family: var(--jp-ui-font-family);
}


:root {
  --jp-warn-color0: var(--md-orange-700);
}

p {
  margin-top: unset;
  margin-bottom: unset;
}

small {
  font-size: unset;
}

strong {
  font-weight: unset;
}

/* Override Blueprint's _typography.scss styles */
a {
  text-decoration: unset;
  color: unset;
}

a:hover {
  text-decoration: unset;
  color: unset;
}

/* Override Blueprint's _accessibility.scss styles */
:focus {
  outline: unset;
  outline-offset: unset;
  -moz-outline-radius: unset;
}
/* ... */

